# meli-token-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: config_vars.yaml.example
src/meli_token_manager/: __init__.py  cli.py  config_loader.py  gcp_secret_storage.py  initializer.py  rotator.py  token_access.py
