[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meli-token-manager"
version = "0.1.0"
description = "MercadoLibre token rotation and retrieval with GCP Secret Manager sync."
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
  { name = "Notorios TI" }
]
dependencies = [
  "requests>=2.31.0",
  "google-cloud-secretmanager>=2.20.0",
  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=env-manager"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

[project.scripts]
meli-token-rotate = "meli_token_manager.cli:main"

[tool.hatch.metadata]
allow-direct-references = true
