[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "meli-token-manager"
version = "0.1.2"
description = "MercadoLibre token rotation and retrieval with GCP Secret Manager sync."
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
  { name = "Notorios TI" }
]

packages = [{ include = "meli_token_manager", from = "src" }]

dependencies = [
  "requests>=2.31.0",
  "google-cloud-secret-manager",
  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=env-manager"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

[project.scripts]
meli-token-rotate = "meli_token_manager.cli:main"
